# kartini

./: .gitignore  Makefile  README.md  dune-project  kartini.opam
container/: README.md
data/: dune  metadata.ml
lib/: add.ml  build.ml  build.mli  clean.ml  dune  get.ml  install.ml  remove.ml
system/: dune  headquarter.ml  hq.ml  manifest.ml  repository.ml
test/: dune  kartini.ml
testbed/: metadata.yml
testbed/var/db/repo/openrc/: metadata.yml
utils/: file.ml  map.ml  process.ml
var/db/kartini/installed/kartini/: manifest
