opam-version: "2.0.5"
name: "kartini"
maintainer: "Yoghaswara Hadi Nugroho <->"
authors: [
  "Yoghaswara Hadi Nugroho <->"
]
license: "MIT"
homepage: "https://github.com/onigura/kartinii"
doc: "-"
bug-reports: "https://github.com/onigura/kartinii/issues"
depends: [
  "dune" {>= "2.8.5"}
  "ocaml" {>= "4.12.0"}
  "ppx_deriving_yaml" {>= "0.1.0"}
  "yaml" {>="2.1.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/onigura/kartinii.git"
synopsis: "Minimalist package administrator"
description: """
"""