opam-version: "2.0.5"
name: "kartini"
maintainer: "Yoghaswara Hadi Nugroho <->"
authors: [
  "Yoghaswara Hadi Nugroho <->"
]
license: "MIT"
homepage: "https://github.com/52ml/kartini"
doc: "-"
bug-reports: "https://github.com/52ml/kartini/issues"
depends: [
  "dune" {>= "2.8.5"}
  "ocaml" {>= "4.12.0"}
  "ppx_deriving_yaml" {>= "0.1.0"}
  "yaml" {>="2.1.0"}
  "cmdliner" {>= "1.0.4"}
  "core" {>= "v0.14.1"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/52ml/kartini.git"
synopsis: "Minimalist package administrator"
description: """
"""